--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
           echo test, and deploy your project.
 
       - name: notify
-        if: always
+        if: always()
         uses: cinotify/github-action@main
         with:
           to: 'utkarshamendhe7@gmail.com'
